# TemplateEguiApp

./: .gitignore  Cargo.toml  README.md
src/: app.rs  app_state.rs  main.rs  persistent_state.rs
